[project]
name = "28-internet-of-agents"
version = "0.1.0"
description = ""
authors = [
    {name = "Hassan Mehmood",email = "ihassan463m@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "langgraph (>=0.6.7,<0.7.0)",
    "weasyprint (>=61.0,<62.0)",
    "markdown (>=3.4,<4.0)",
    "beautifulsoup4 (>=4.12,<5.0)",
    "jinja2 (>=3.1,<4.0)",
    "fastapi[standard] (>=0.116.2,<0.117.0)",
    "uvicorn (>=0.36.0,<0.37.0)",
    "sqlalchemy (>=2.0.43,<3.0.0)",
    "passlib (>=1.7.4,<2.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "python-jose (>=3.5.0,<4.0.0)",
    "langchain (>=0.3.27,<0.4.0)",
    "langchain-openai (>=0.3.33,<0.4.0)",
    "langchain-community (>=0.3.29,<0.4.0)",
    "langchain-tavily (>=0.2.11,<0.3.0)",
    "xhtml2pdf (>=0.2.17,<0.3.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "mcp (>=1.14.1,<2.0.0)",
    "wikipedia (>=1.4.0,<2.0.0)",
    "bcrypt (>=4.3.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
